Fixed CSS layout issue

--- a/css/md-github.css
+++ b/css/md-github.css
@@ -8,7 +8,7 @@ div.md_dashedbox {
     margin-bottom:15px
 }
 
-div.mdnotebook div.markdown-github {
+div.md_dashedbox div.markdown-github {
   color:white;
   line-height: 20px;
   padding: 0px 5px;
